--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do Site</title>
+    <link rel="stylesheet" href="etilos/style.css">
+    <title>Site Curso em Video</title>
 </head>
 <body>
     <main>
