--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>Curso Grátis</h1>
+            <img src="imagem" alt="">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS</h2>
