--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <main>
         <header>
             <h1>Curso Grátis</h1>
-            <img src="imagem" alt="">
+            <img src="imagem/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS</h2>
+            <img  class="lado" src="imagem/curso-html-css.png" alt="HTML e CSS">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat explicabo ipsa, eveniet illo est esse ullam tenetur dignissimos!</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagem/curso-javascript.png" alt="JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus vel amet molestias ab dolorem dicta autem obcaecati neque ducimus nam aperiam ut sed numquam, doloremque ex libero tenetur ipsa qui porro nemo ipsum accusantium? Aut fuga inventore iure doloremque ratione!</p>
         </article>
     </main>
