--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <article>
             <h2>Curso de HTML5 com CSS</h2>
             <img  class="lado" src="imagem/curso-html-css.png" alt="HTML e CSS">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat explicabo ipsa, eveniet illo est esse ullam tenetur dignissimos!</p>
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
             <img class="lado" src="imagem/curso-javascript.png" alt="JavaScript">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus vel amet molestias ab dolorem dicta autem obcaecati neque ducimus nam aperiam ut sed numquam, doloremque ex libero tenetur ipsa qui porro nemo ipsum accusantium? Aut fuga inventore iure doloremque ratione!</p>
+            <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
         </article>
     </main>
 </body>
